--- a/NewsEditorCore/tinymce/tinymceTemplate.htm
+++ b/NewsEditorCore/tinymce/tinymceTemplate.htm
@@ -13,7 +13,8 @@
   </script>
   <script>
   	tinyMCE.init({
-  	  selector: '#editorcontent',
+            selector: '#editorcontent',
+            content_style: 'p{text-align: justify; text-indent: 1.25cm; margin-top: 0.5em; margin-bottom: 0.5em; font-family: Times New Roman, Times, serif; font-size: 12pt; line-height: 150%;}',
   	  plugins: [
   	    'autolink link lists charmap hr anchor',
   	    'searchreplace wordcount visualblocks visualchars code fullscreen insertdatetime nonbreaking',
