Исправил отступы в новостях. Добавил функцию увеличения для всех изображений.

--- a/NewsEditorCore/tinymce/tinymceTemplate.htm
+++ b/NewsEditorCore/tinymce/tinymceTemplate.htm
@@ -14,7 +14,7 @@
   <script>
   	tinyMCE.init({
             selector: '#editorcontent',
-            content_style: 'p{text-align: justify; text-indent: 1.25cm; margin-top: 0.5em; margin-bottom: 0.5em; font-family: Times New Roman, Times, serif; font-size: 12pt; line-height: 150%;}',
+            content_style: 'p{text-align: justify; text-indent: 1.25cm; margin-top: 0.5em; margin-bottom: 0.5em; line-height: 150%;}',
   	  plugins: [
   	    'autolink link lists charmap hr anchor',
   	    'searchreplace wordcount visualblocks visualchars code fullscreen insertdatetime nonbreaking',
